<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="euro">€</string>
    <string name="usd">$</string>
    <string name="jpy">¥</string>
    <string name="from_edit_text">from</string>
    <string name="to">to</string>
    <string name="convert">CONVERT</string>
    <string name="EUR">EUR</string>
    <string name="USD">USD</string>
    <string name="JPY">JPY</string>
    <string name="initial_string">Initial string</string>
    <string name="radio_button_error">Please choose two different currencies</string>
    <string name="insufficient_funds">No sufficient funds to make this conversion</string>
    <string name="enter_the_amount">Please enter the amount of money to convert</string>
    <string name="you_converted">You converted</string>
    <string name="commissions_paid">Commissions paid:</string>
    <string name="balance">BALANCE</string>
    <string name="commissions">COMMISSIONS</string>
</resources>
