<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <View
            android:id="@+id/upper_half"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"/>

    <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/upper_half"
            android:layout_margin="@dimen/margin"
            android:stretchColumns="1">
        <TableRow>
            <TextView
                    android:id="@+id/heading_balance"
                    style="@style/cell_heading"
                    android:text="@string/balance"/>
            <TextView
                    android:id="@+id/heading_commissions"
                    style="@style/cell_heading"
                    android:text="@string/commissions"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/eur_balance_value"
                    style="@style/cell_value"/>
            <TextView
                    android:id="@+id/EUR"
                    style="@style/cell_currency"
                    android:text="@string/EUR"/>
            <TextView
                    android:id="@+id/eur_commissions_value"
                    style="@style/cell_value"/>
            <TextView
                    android:id="@+id/EUR_commissions"
                    style="@style/cell_currency"
                    android:text="@string/EUR"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/usd_balance_value"
                    style="@style/cell_value"/>
            <TextView
                    android:id="@+id/USD"
                    style="@style/cell_currency"
                    android:text="@string/USD"/>
            <TextView
                    android:id="@+id/usd_commissions_value"
                    style="@style/cell_value"/>
            <TextView
                    android:id="@+id/USD_commissions"
                    style="@style/cell_currency"
                    android:text="@string/USD"/>
        </TableRow>
        <TableRow>
            <TextView
                    android:id="@+id/jpy_balance_value"
                    style="@style/cell_value"/>
            <TextView
                    android:id="@+id/JPY"
                    style="@style/cell_currency"
                    android:text="@string/JPY"/>
            <TextView
                    android:id="@+id/jpy_commissions_value"
                    style="@style/cell_value"/>
            <TextView
                    android:id="@+id/JPY_commissions"
                    style="@style/cell_currency"
                    android:text="@string/JPY"/>
        </TableRow>
    </TableLayout>

    <EditText
            android:id="@+id/amount_from"
            android:inputType="numberDecimal"
            android:ems="10"
            app:layout_constraintTop_toTopOf="@id/radio_group_from"
            app:layout_constraintBottom_toBottomOf="@id/radio_group_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/radio_group_from"
            android:background="@drawable/border"
            android:layout_margin="8dp"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:cursorVisible="true"
            android:textSize="@dimen/text_size_smallest"/>

    <RadioGroup
            android:id="@+id/radio_group_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/upper_half"
            app:layout_constraintStart_toEndOf="@id/amount_from"
            app:layout_constraintEnd_toStartOf="@id/to">

        <RadioButton
                android:id="@+id/from_eur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:layout_marginBottom="8dp"/>

        <RadioButton
                android:id="@+id/from_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"/>

        <RadioButton
                android:id="@+id/from_jpy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpy"
                android:layout_marginTop="8dp"/>
    </RadioGroup>

    <TextView
            android:id="@+id/to"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:text="@string/to"
            android:gravity="center"
            android:textSize="@dimen/text_size_smallest"
            app:layout_constraintBottom_toBottomOf="@id/radio_group_from"
            app:layout_constraintTop_toTopOf="@id/radio_group_from"
            app:layout_constraintStart_toEndOf="@id/radio_group_from"
            app:layout_constraintEnd_toStartOf="@id/radio_group_to"
            android:layout_margin="8dp"/>

    <RadioGroup
            android:id="@+id/radio_group_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/upper_half"
            app:layout_constraintStart_toEndOf="@id/to"
            app:layout_constraintEnd_toStartOf="@id/convert">

        <RadioButton
                android:id="@+id/to_eur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:layout_marginBottom="8dp"/>

        <RadioButton
                android:id="@+id/to_usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usd"/>

        <RadioButton
                android:id="@+id/to_jpy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jpy"
                android:layout_marginTop="8dp"/>
    </RadioGroup>

    <Button
            android:id="@+id/convert"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:background="@color/colorAccent"
            android:text="@string/convert"
            app:layout_constraintTop_toBottomOf="@id/radio_group_from"
            app:layout_constraintTop_toTopOf="@id/radio_group_from"
            app:layout_constraintBottom_toBottomOf="@id/radio_group_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/radio_group_to"
            android:layout_margin="8dp"/>
    <TextView
            android:id="@+id/info_message"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_from"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textSize="@dimen/text_size_small"/>
</androidx.constraintlayout.widget.ConstraintLayout>